mobile z-index fixes

--- a/src/main.scss
+++ b/src/main.scss
@@ -135,6 +135,9 @@ $radius_small: .2em;
   margin-right: $medium;
   border: 1px solid $dark_grey;
   border-radius: $radius_small;
+  * {
+    z-index: 999;
+  }
 
   @media (max-width: 767px) {
     display: flex;
@@ -172,7 +175,7 @@ $radius_small: .2em;
   border: none;
   font-size: 16pt;
   color: $accent;
-  padding: $small $medium;
+  z-index: 999;
 
   &.highlighted {
     // border-radius: $radius_small;
